DUN-8 | Создание API для тегов
