# routes/API/tags.php
@@ -1,6 +1,5 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -14,16 +13,6 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('tags', 'App\Http\Controllers\API\TagsController@index');
 });
-
-Route::group([
-    'prefix' => 'auth'
-], function () {
-    require __DIR__ . '/API/auth.php';
-});
-
-require __DIR__ . '/API/skins.php';
-require __DIR__ . '/API/player.php';
-require __DIR__ . '/API/tags.php';
