# storage/api-docs/api-docs.json
@@ -304,6 +304,41 @@
                     }
                 }
             }
+        },
+        "/api/tags": {
+            "get": {
+                "tags": [
+                    "Skins"
+                ],
+                "summary": "Скины",
+                "description": "Скины",
+                "operationId": "App\\Http\\Controllers\\API\\TagsController::index",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Tag"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -393,6 +428,31 @@
                     "skin": {
                         "description": "Скин",
                         "type": "string",
+                        "readOnly": true
+                    }
+                },
+                "type": "object"
+            },
+            "Tag": {
+                "properties": {
+                    "id": {
+                        "description": "ID",
+                        "type": "integer",
+                        "readOnly": true
+                    },
+                    "name": {
+                        "description": "Назавние",
+                        "type": "string",
+                        "readOnly": true
+                    },
+                    "rating": {
+                        "description": "color",
+                        "type": "string",
+                        "readOnly": true
+                    },
+                    "skin": {
+                        "description": "system",
+                        "type": "integer",
                         "readOnly": true
                     }
                 },
